test/bad/nullables/nullable01.px

Int? x = 5
Int x' = x
